...
                                <items>
                                    <barButtonItem style="plain" id="MAo-fz-xnz">
                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Isf-a6-rGL">
                                            <rect key="frame" x="16" y="4.5" width="343" height="51"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                            <state key="normal" title="UNLOCK"/>
                                            <connections>
                                                <action selector="goToWallet:" destination="y0F-oI-Qfx" eventType="touchUpInside" id="nAZ-xO-PU7"/>
                                                <segue destination="9pv-A4-QxB" kind="show" identifier="goToWallet" id="Jrv-tD-X2d"/>
                                            </connections>
                                        </button>
                                    </barButtonItem>
...
                                <items>
                                    <barButtonItem style="plain" id="M5U-Q7-Elm">
                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="bmz-PW-cmJ">
                                            <rect key="frame" x="16" y="4.5" width="343" height="51"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                            <state key="normal" title="PROCEED"/>
                                            <connections>
                                                <action selector="proceed:" destination="nbh-eY-s7W" eventType="touchUpInside" id="lVH-iE-N0k"/>
                                                <segue destination="Ddg-J0-xFT" kind="show" identifier="scanTransactionSegue" id="0mP-QK-o7D"/>
                                            </connections>
                                        </button>
                                    </barButtonItem>
...
                                <items>
                                    <barButtonItem style="plain" id="ejv-hC-qVI">
                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="dvI-4f-fQ7">
                                            <rect key="frame" x="16" y="4.5" width="343" height="51"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                            <state key="normal" title="FINISH"/>
                                            <connections>
                                                <action selector="proceed:" destination="VT5-Pr-Q6r" eventType="touchUpInside" id="ubv-3T-ScI"/>
                                                <segue destination="y0F-oI-Qfx" kind="show" identifier="goHomeSegue" id="Vct-64-eHm"/>
                                            </connections>
                                        </button>
                                    </barButtonItem>
...
                                <items>
                                    <barButtonItem style="plain" id="0zg-Oo-DdQ">
                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="W4j-zd-n52">
                                            <rect key="frame" x="16" y="4.5" width="343" height="51"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                            <state key="normal" title="APPROVE"/>
                                            <connections>
                                                <segue destination="VT5-Pr-Q6r" kind="show" identifier="showSignedTXSegue" id="YE1-FQ-nTV"/>
                                            </connections>
                                        </button>
                                    </barButtonItem>
                                </items>
...
