...
        //2. Add the text field. You can configure it however you need.
        alert.addTextField { (textField) in
            textField.text = "paste raw tx..."
        }
        
        // 3. Grab the value from the text field, and print it when the user clicks OK.
        alert.addAction(UIAlertAction(title: "Parse", style: .default, handler: { [weak alert] (_) in
            let textField = alert!.textFields![0] // Force unwrapping because we know it exists.
            let raw_tx = textField.text!
            print("Text field: \(raw_tx)")
            
            self.transactionScanned(encodedTx: raw_tx)
        }))
...
