...
        didSet {
            if selectedAddress == nil {
                // SELECT
                payButton.setTitle("SELECT ACCOUNT", for: .normal)
            } else {
                // PAY
                payButton.setTitle("PAY", for: .normal)
            }
        }
    }
    
    
    @IBOutlet weak var payButton: UIButton!
...
